Fixed issue with content overflowing outside container.

--- a/src/auth/components/login/Login.module.css
+++ b/src/auth/components/login/Login.module.css
@@ -1,23 +1,17 @@
 .wrapper {
     background-color: var(--hds-brand-color-bus);
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
 }
 
 .content {
     margin: 20px 10px;
-    width: auto;
+    width: 95%;
     text-align: center;
     color: var(--hds-ui-color-white);
-}
-
-@media (min-width: 620px) {
-    .content {
-        width: 600px;
-    }
 }
 
 .logo {
@@ -33,3 +27,18 @@
     margin-top: 50px;
 }
 
+.content button {
+    min-width: auto;
+}
+
+@media (min-width: 600px) {
+    .content {
+        width: 600px;
+    }
+}
+
+@media (min-width: 230px) {
+    .content button {
+        min-width: 230px;
+    }
+}
